# codetechnician

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
buildspec/: codetechnician.spec
claudecli/: __main__.py  ai_functions.py  codebase_watcher.py  constants.py  interact.py  load.py  parseaicode.py  pure.py  save.py
codetechnician/: __main__.py  ai_clients.py  ai_functions_openai.py  ai_response.py  anthropic_interface.py  codebase_watcher.py  coder_system_prompt_default.txt  command_parser.py  constants.py  file_selector.py  general_system_prompt_default.txt  interact.py  load.py  openai_interface.py  parseaicode_xml.py  printing.py  process_response_json.py  pure.py  save.py
codetechnician/tests/: test_command_parser.py
